[package]
name = "cyrus-relayer"
version = "1.0.0"
edition = "2021"
description = "Cyrus Protocol cross-chain settlement processor"

[[bin]]
name = "cyrus-relayer"
path = "src/main.rs"

[lib]
name = "cyrus_relayer"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"