[package]
name = "cyrus-relayer"
version = "1.0.0"
edition = "2021"
description = "Cyrus Protocol cross-chain settlement processor"

[[bin]]
name = "cyrus-relayer"
path = "src/main.rs"

[lib]
name = "cyrus_relayer"
path = "src/lib.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation (for demo tx hashes)
rand = "0.9.1"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client (for future RPC calls)
reqwest = { version = "0.12.22", features = ["json"] }

# Base64 encoding/decoding
base64 = "0.22.1"

# Hex encoding/decoding  
hex = "0.4"